--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "scripts": {
     "postinstall": "husky install"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "workspaces": [
+    "web"
+  ]
 }
