--- a/web/package.json
+++ b/web/package.json
@@ -2,10 +2,10 @@
   "name": "web",
   "version": "0.1.0",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.2.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -14,7 +14,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.4.3"
   },
   "scripts": {
     "build": "react-scripts build",
@@ -40,14 +40,15 @@
   },
   "devDependencies": {
     "@types/history": "^4.7.9",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-helmet": "^6.1.2",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-helmet": "^6.1.3",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.3.0",
-    "@types/react": "^16.9.0",
     "@types/styled-components": "^5.1.14",
+    "lint-staged": "^11.2.0",
     "react-snap": "^1.23.0",
     "sass": "^1.42.1"
   }
