--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,8 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "postbuild": "react-snap",
+    "prebuild": "bash ./timestamp.sh",
+    "prestart": "bash ./timestamp.sh",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
