--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,16 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -16,30 +26,6 @@
     "styled-components": "^5.3.1",
     "typescript": "~4.4.3"
   },
-  "scripts": {
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "postbuild": "react-snap",
-    "prebuild": "bash ./timestamp.sh",
-    "prestart": "bash ./timestamp.sh",
-    "start": "react-scripts start",
-    "test": "react-scripts test"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "@types/history": "^4.7.9",
     "@types/jest": "^27.0.2",
@@ -53,5 +39,20 @@
     "lint-staged": "^11.2.0",
     "react-snap": "^1.23.0",
     "sass": "^1.42.1"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "license": "MIT",
+  "name": "web",
+  "version": "0.1.0",
+  "scripts": {
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap",
+    "prebuild": "bash ./timestamp.sh",
+    "prestart": "bash ./timestamp.sh",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
   }
 }
