--- a/web/package.json
+++ b/web/package.json
@@ -54,5 +54,6 @@
     "prestart": "bash ./timestamp.sh",
     "start": "react-scripts start",
     "test": "react-scripts test"
-  }
+  },
+  "private": false
 }
