draft  make file

--- a/homeworks/Makefile
+++ b/homeworks/Makefile
@@ -1,7 +1,13 @@
 application := package-path
 
+BASEDIR = $(PWD)
+
 starter_code=starter-code
 solution_code=solution-code
+
+# declare -a applications
+
+applications=($(ls -d */ | cut -f1 -d'/'))
 
 .PHONY : create-zip
 create-zip:
@@ -11,3 +17,7 @@ create-zip:
 .PHONY : delete-zip
 delete-zip:
 	rm -rf ${application}/${application}-${starter_code}.zip ${application}/${application}-${solution_code}.zip
+
+.PHONY : zip-all
+zip-all:
+	@for f in $(shell ls ${BASEDIR}); do echo $${f}; done
