--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "npmClient": "yarn",
-  "packages": ["homeworks", "labs", "web"],
+  "packages": ["web"],
   "version": "0.0.0",
   "useWorkspaces": true
 }
